Cleaned up favorites tab

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,14 +6,20 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home</a>
+      <li class="nav-item">
+        <LinkTo class="nav-link" @route="index">
+          Home
+        </LinkTo>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/search">Search</a>
+        <LinkTo class="nav-link" @route="search">
+          Search
+        </LinkTo>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/favorite">Favorites</a>
+        <LinkTo class="nav-link" @route="favorite">
+          Favorites
+        </LinkTo>
       </li>
     </ul>
     {{#if session.isAuthenticated}}
