--- a/app/templates/detail.hbs
+++ b/app/templates/detail.hbs
@@ -1,14 +1,14 @@
 <div class="container-fluid">
   <div class="row justify-content-center">
     <div class="card m-3 text-center" style="width: 20rem;">
-      <img class="card-img-top" src={{model.movie.Poster}} alt="Card image cap">
+      <img class="card-img-top" src={{model.movie.Poster}} alt="{{model.movie.Title}} Movie Poster">
     </div>
     <div class="col-5 py-3">
       <h3>{{model.movie.Title}}</h3>
       {{#if model.favorite}}
-        <button {{action 'unsave'}}>Unsave</button>
+        <button {{action "unsave"}}>Unsave</button>
       {{else}}
-        <button {{action 'save'}}>Save</button>
+        <button {{action "save"}}>Save</button>
       {{/if}}
       <h4>{{model.movie.Year}} {{model.movie.Rated}}</h4>
       <h5>Genre: {{model.movie.Genre}}</h5>
