--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,8 +4,9 @@
     <p class="lead">Search an endless amount of movies and TV shows.</p>
     <hr class="my-4">
     <p>To get started, click the search button below!</p>
-    <a class="btn btn-primary btn-lg" href="/search" role="button">Search</a>
+    <LinkTo @route="search" class="btn btn-primary btn-lg">Search</LinkTo>
   </div>
 </div>
+
 
 {{outlet}}
